--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <script>
     var videoAD = {
-      mode: localStorage.getItem('mode') || 10, // 5秒进入点击广告
+      mode: localStorage.getItem('mode') || 10, // 方便测试用，初始10秒进入点击广告
       enterAd: false, // 下次点击是否进入广告
       adLinks: [
         'http://v5-dy.ixigua.com/94a8e6dd497f69ca666f154df6a5f29d/5e479bce/video/tos/cn/tos-cn-ve-15/03577a38d37c41d79e71517d10ae12b6/?a=1128&br=0&bt=1534&cr=0&cs=0&dr=0&ds=3&er=&l=20200215141947010008073045132BA3A7&lr=aweme&qs=0&rc=M3lpZnE5ZmY0cjMzN2kzM0ApMzM2ZmhoNDxpN2c8aWU2OGdqYmtxYTUwamxfLS0uLS9zczEyL2NeLzVgL2MyM2NjYzQ6Yw%3D%3D&vl=&vr=',
